<resources>
    <string name="app_name">Projet Final</string>
    <string name="verification_par_sms">Vérification par SMS</string>
    <string name="un_sms_sera_envoyer_a_votre_telephone">Un SMS sera envoyer à votre télephone</string>
    <string name="entrez_votre_numero_de_telephone">Entrez votre numéro de télephone</string>
    <string name="_212">+212</string>
    <string name="_680975683">627494042</string>
    <string name="recuperer_le_code">Récupérer le code</string>
    <string name="entrez_le_code">Entrez le code</string>
    <string name="vous_n_avez_pas_recu_le_code">Vous n\'avez pas reçu le code?</string>
    <string name="re_envoyer_le_code">Re-envoyer le code</string>
    <string name="verifier">Vérifier</string>
    <string name="nom">Nom:</string>
    <string name="prenom">Prenom:</string>
    <string name="date_de_naissance">Date de Naissance:</string>
    <string name="email">Email:</string>
    <string name="telephone">Télephone:</string>
    <string name="inscription">Inscription</string>
    <string name="invalid_name">Veuillez entrez une valeur valide pour le nom</string>
    <string name="invalid_name2">Veuillez entrez une valeur valide pour le prenom</string>
    <string name="invalid_tel">Veuillez entrer un numero de telephone valide</string>
    <string name="invalid_email">Veuillez entrez un email valid</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="genre">Genre:</string>
    <string name="title_activity_menu_navigation">MenuNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menu de Navigation</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Mes Amis</string>
    <string name="menu_gallery">Mes Demandes Envoyees</string>
    <string name="menu_slideshow">Map</string>

    <string name="home_second">Home Second</string>

    <string name="menu_demande"></string>
    <string name="menu_map">Map</string>
    <string name="menu_conf">Configuration</string>
    <string name="suivant">Suivant</string>
    <string name="title_activity_maps">Map</string>
    <string name="bloque">Bloque</string>
    <string name="accepter">Accepter</string>
    <string name="age_min">Age Min:</string>
    <string name="age_max">Age Max:</string>
    <string name="rayon">Rayon:</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="bloquer">Bloquer</string>
    <string name="tv">Copyright \u00a9 HASSAR Hassane 2021 \n Tous les droits réservés</string>
</resources>
